updated category endpoints
